# ClaudeProjects

./: .gitignore  BISMARCK_BRIEF_ANALYSIS.txt  BISMARCK_BRIEF_DETAILED_LIST.txt  BISMARCK_BRIEF_INDEX.txt  BISMARCK_QUICK_REFERENCE.txt  BISMARCK_VISUAL_SUMMARY.txt  CLAUDE.md  README.md  _config.yml  index.html  project-grad-thesis.md  style.css  thesis-research.html
alex-workout/: AGENTS.md  IMPLEMENTATION_PLAN.md  abs.html  index.html  legs.html  loop.sh  manifest.json  plates.html  progress.html  pull.html  push.html  recovery.html  references.html  rest-timer.html  style.css  (+2 more)
erasure/: .gitignore  DIFFERENTIATION.md  README.md  pyproject.toml
erasure/dashboard/: index.html
erasure/erasure/: __init__.py  cli.py  profile.py  secrets.py
erasure/erasure/accounts/: __init__.py  schema.py  sherlock.py
erasure/erasure/breaches/: __init__.py  hibp.py  schema.py
erasure/erasure/brokers/: __init__.py  base.py  registry.py  scan.py
erasure/erasure/browser/: __init__.py  session.py
erasure/erasure/drop/: __init__.py  client.py  schema.py
erasure/erasure/emails/: __init__.py  holehe.py  schema.py
erasure/erasure/legal/: __init__.py
erasure/erasure/report/: __init__.py  html.py
erasure/erasure/scheduler/: __init__.py
erasure/erasure/verify/: __init__.py  diff.py
erasure/scripts/: _download_ca_registry.py  mark_drop_coverage.py  merge_ca_registry.py  parse_grauer.py
erasure/tests/: __init__.py  test_accounts.py  test_breaches.py  test_cli.py  test_drop.py  test_emails.py  test_profile.py  test_registry.py  test_report.py  test_secrets.py  test_verify.py
(+172 files in other folders)
